--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/react-bootstrap-typeahead/css/Typeahead.css"
+  />
     <title>RateMyTeam</title>
   </head>
   <body>
